--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,8 @@
         <p class="error">{{ error }}</p>
     {% endif %}
     <form method="POST">
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" name="username" required>
+        <label for="email">E-mail (Login):</label>
+        <input type="email" id="email" name="email" required>
         <label for="password">Senha:</label>
         <input type="password" id="password" name="password" required>
         <input type="submit" value="Entrar">
