--- a/templates/register.html
+++ b/templates/register.html
@@ -7,11 +7,21 @@
         <p class="error">{{ error }}</p>
     {% endif %}
     <form method="POST">
-        <label>Nome de Usuário:</label><input type="text" name="username" required>
-        <label>Senha:</label><input type="password" name="password" required>
-        <label>Nome completo:</label><input type="text" name="nome">
-        <label>Telefone:</label><input type="text" name="telefone">
-        <label>Endereço:</label><input type="text" name="endereco">
+        <label for="email">E-mail (Será seu login):</label>
+        <input type="email" id="email" name="email" required>
+        
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" required>
+        
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" name="cpf" required>
+        
+        <label for="nome">Nome completo:</label>
+        <input type="text" id="nome" name="nome">
+        
+        <label for="telefone">Telefone:</label>
+        <input type="text" id="telefone" name="telefone">
+        
         <input type="submit" value="Registrar">
     </form>
 </div>
